--- a/components/x-articolo.html
+++ b/components/x-articolo.html
@@ -1,13 +1,70 @@
-<polymer-element name="x-articolo">
+<polymer-element name="x-articolo"  attributes="value">
 	<template>
-		<x-articolocodice></x-articolocodice>
+		<x-articolocodice  value="{{value}}"></x-articolocodice>
 		<x-articolodescrizione></x-articolodescrizione>
 	</template>
 	<script>
 	Polymer('x-articolo', {
-		myfocus: function (){
-			this.webkitShadowRoot.querySelector('x-articolocodice').myfocus();
-		}
+		_type: 'articolo',
+		value: '',
+		created: function (){
+
+			this.codice = this.webkitShadowRoot.querySelector('x-articolocodice').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
+			this.descrizione =  this.webkitShadowRoot.querySelector('x-articolodescrizione').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
+
+			// when the "codice input" change call my "oncodechange" method
+			// faccio questo passamano 
+			//perchè se operassi direttamente nel metodo onchange dell'input 
+			//perdo i riferimenti ad alcune proprietà di x-fornitore che mi servono
+			this.codice.onchange = function (){
+				console.log('the input has changed');		
+				//call the x-fornitore oncodechange function  
+				this.oncodechange();
+			}.bind(this);
+			
+			
+			this.oncodechange = function (){
+				//il codice fornitore è cambiato
+				//chiedo al server di mandarmi i nuovi dati
+				$.ajax({
+					type: "POST",
+					url: "./../webContab/my/php/core/do.php",
+					data: { action: 'getOne',
+							params: {
+										_type: this._type,
+										codice: this.codice.value,
+							},
+					},
+					context: this,
+				}).done(function( msg ) {
+				//console.log("segue...");
+				//MYLOG2=this+'111';
+				//console.log(this.codice);
+				//console.log(msg);
+					var json = $.parseJSON(msg)[this['_type']];
+					if (json.descrizione){
+						this.descrizione.value = json.descrizione;
+					}else{
+						console.log('Non trovato: '+this._type+' = '+this.value);
+					}
+				});				
+			};	
+			//manage keyboard events
+			$(this).keydown(function(event) {
+				switch (event.which){
+					case 13:
+						return this.focusNext();
+					//default: console.log(event.which);
+				}
+			});
+			/*focus management*/
+			this.focusAbleContainer = this.webkitShadowRoot;
+		},
+		/*focus management*/
+		focusedID: -1,
+		myfocus: myfocus,
+		focusNext: focusNext,
+		getFocusAble : getFocusAble,
 	});
 	</script>
 </polymer-element>
