--- a/components/x-fornitore.html
+++ b/components/x-fornitore.html
@@ -2,9 +2,9 @@
 	<template>
 
 			Codice
-			<x-fornitore-codice value="{{value}}"></x-fornitore-codice>
+			<x-fornitorecodice value="{{value}}"></x-fornitorecodice>
 			Ragione Sociale
-			<x-fornitore-ragionesociale></x-fornitore-ragionesociale>
+			<x-fornitoreragionesociale></x-fornitoreragionesociale>
 	</template>
 	<script>
 	Polymer('x-fornitore', {
@@ -12,8 +12,8 @@
 		value: '',
 		created: function (){
 
-			this.codice = this.webkitShadowRoot.querySelector('x-fornitore-codice').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
-			this.ragionesociale =  this.webkitShadowRoot.querySelector('x-fornitore-ragionesociale').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
+			this.codice = this.webkitShadowRoot.querySelector('x-fornitorecodice').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
+			this.ragionesociale =  this.webkitShadowRoot.querySelector('x-fornitoreragionesociale').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
 
 			// when the "codice input" change call my "oncodechange" method
 			// faccio questo passamano 
@@ -40,6 +40,10 @@
 					},
 					context: this,
 				}).done(function( msg ) {
+				//console.log("segue...");
+				//MYLOG2=this+'111';
+				//console.log(this.codice);
+				//console.log(msg);
 					var json = $.parseJSON(msg)[this['_type']];
 					if (json.ragionesociale){
 						this.ragionesociale.value = json.ragionesociale;
@@ -47,8 +51,7 @@
 						console.log('Non trovato: '+this._type+' = '+this.value);
 					}
 				});				
-			}
-			
+			};	
 			//manage keyboard events
 			$(this).keydown(function(event) {
 				switch (event.which){
@@ -60,13 +63,11 @@
 			/*focus management*/
 			this.focusAbleContainer = this.webkitShadowRoot;
 		},
-		
 		/*focus management*/
 		focusedID: -1,
 		myfocus: myfocus,
 		focusNext: focusNext,
 		getFocusAble : getFocusAble,
-
 	});
 	</script>
 </polymer-element>
