--- a/components/x-fornitore.html
+++ b/components/x-fornitore.html
@@ -1,6 +1,5 @@
-<dom-module id="x-fornitore" attributes="value">
+<dom-module id="x-fornitore">
 	<template>
-
 			Codice
 			<x-fornitorecodice value="{{value}}"></x-fornitorecodice>
 			Ragione Sociale
@@ -8,7 +7,13 @@
 	</template>
 	<script>
 	Polymer({
-		is:'x-fornitore', 
+		is:'x-fornitore',
+		properties: {
+			value: {
+				type: String,
+				notify: true
+			}
+		},
 		_type: 'clientefornitore',
 		value: '',
 		ready: function (){
