--- a/components/x-vettorecodice.html
+++ b/components/x-vettorecodice.html
@@ -1,4 +1,4 @@
-<dom-module id="x-vettorecodice" attributes="value">
+<dom-module id="x-vettorecodice">
 	<template>
 		<label>
 			Vettore
@@ -7,7 +7,13 @@
 	</template>
 	<script>
 	Polymer({
-		is:'x-vettorecodice', 
+		is:'x-vettorecodice',
+		properties: {
+			value: {
+				type: String,
+				notify: true
+			}
+		},
 		value: '',
 		ready: function (){
 			//manage keyboard events
